[gd_scene load_steps=21 format=3 uid="uid://8gsmkedibhc3"]

[ext_resource type="Script" path="res://scripts/MouseLock.gd" id="1_jiep2"]
[ext_resource type="AudioStream" uid="uid://4yfkmmsia2xd" path="res://sounds/ambiance_waterfall_loop_03.wav" id="2_252j6"]
[ext_resource type="AudioStream" uid="uid://pycu81ydlas7" path="res://sounds/faster-drums-synths.wav" id="3_3db8j"]
[ext_resource type="Material" uid="uid://dkiqdu4cicses" path="res://materials/green_mat.tres" id="4_7q6nm"]
[ext_resource type="Script" path="res://scripts/DamagableEvent.gd" id="5_fwig1"]
[ext_resource type="Material" uid="uid://buqe53e08j7qf" path="res://materials/red_mat.tres" id="6_i5yiy"]
[ext_resource type="Script" path="res://scripts/PlayerMovement.gd" id="7_md40u"]
[ext_resource type="PackedScene" uid="uid://dpa7o5qo3e0ep" path="res://scenes/Box.tscn" id="8_oc2fg"]
[ext_resource type="Script" path="res://scripts/CameraPivot.gd" id="9_fhcu3"]
[ext_resource type="Script" path="res://scripts/CameraCollider.gd" id="10_yfrfe"]
[ext_resource type="Script" path="res://scripts/BlasterControllerV2.gd" id="11_h2wd3"]
[ext_resource type="PackedScene" uid="uid://cjuwrtkf1ly7l" path="res://scenes/Laser.tscn" id="12_fdiwb"]
[ext_resource type="AudioStream" uid="uid://cexfmeipyhaiu" path="res://sounds/blaster-shot-single-5.wav" id="13_w7gp7"]
[ext_resource type="Script" path="res://scripts/PointsController.gd" id="14_m0n7w"]

[sub_resource type="BoxShape3D" id="BoxShape3D_d8amr"]
size = Vector3(10, 0.1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_sbrea"]
size = Vector3(1, 2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_7rm5r"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_fsun1"]

[sub_resource type="Sky" id="Sky_j1tlt"]
sky_material = SubResource("PhysicalSkyMaterial_fsun1")

[sub_resource type="Environment" id="Environment_r70ab"]
background_mode = 2
background_energy_multiplier = 4.0
sky = SubResource("Sky_j1tlt")

[node name="08SignalsAndGroup" type="Node3D"]
script = ExtResource("1_jiep2")

[node name="BGAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_252j6")
autoplay = true
bus = &"WorldAmbience"

[node name="MusicAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3db8j")
autoplay = true
bus = &"MusicAmbience"

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
material_override = ExtResource("4_7q6nm")
size = Vector3(10, 0.1, 10)

[node name="StaticBody3D" type="StaticBody3D" parent="CSGBox3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGBox3D/StaticBody3D"]
shape = SubResource("BoxShape3D_d8amr")

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -3.5)
material_override = ExtResource("4_7q6nm")
size = Vector3(1, 2, 1)

[node name="StaticBody3D" type="StaticBody3D" parent="CSGBox3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGBox3D2/StaticBody3D"]
shape = SubResource("BoxShape3D_sbrea")

[node name="Damagable" type="Node3D" parent="CSGBox3D2/StaticBody3D" node_paths=PackedStringArray("ContainerNode", "MeshReference") groups=["DamagableGroup"]]
script = ExtResource("5_fwig1")
ScaleSize = Vector3(1.2, 1.2, 1.2)
RotationDegrees = 60.0
HitPoints = 3
ContainerNode = NodePath("../..")
MeshReference = NodePath("../..")
BaseMaterial = ExtResource("4_7q6nm")
HitMaterial = ExtResource("6_i5yiy")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07065, 0)
collision_layer = 2
script = ExtResource("7_md40u")
mouseSensitivity = 0.3

[node name="CSGBox3D" parent="CharacterBody3D" instance=ExtResource("8_oc2fg")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("BoxShape3D_7rm5r")

[node name="CameraPivot" type="Node3D" parent="CharacterBody3D"]
script = ExtResource("9_fhcu3")

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.954724, 0.297492, 0, -0.297492, 0.954724, 0, 0.928077, 2.63136)
fov = 60.0

[node name="RayCast3D" type="RayCast3D" parent="CharacterBody3D/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.967383, 0.253319, 0, -0.253319, 0.967383, 0, 0.25, 0)
target_position = Vector3(0, 0, 5)

[node name="CameraCollider" type="Node3D" parent="CharacterBody3D/CameraPivot" node_paths=PackedStringArray("cameraNode", "raycast3D")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
script = ExtResource("10_yfrfe")
cameraNode = NodePath("../Camera3D")
raycast3D = NodePath("../RayCast3D")
CameraColliderLayers = 1

[node name="Hand" type="CSGBox3D" parent="CharacterBody3D/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.973519, 0.228606, 0, -0.228606, 0.973519, 0.283071, 0.057444, -0.2)
size = Vector3(0.05, 0.05, 0.3)

[node name="RayCast3D" type="RayCast3D" parent="CharacterBody3D/CameraPivot/Hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.38419e-07, -0.152138)
target_position = Vector3(0, 0, -30)

[node name="BlasterController" type="Node3D" parent="CharacterBody3D/CameraPivot/Hand" node_paths=PackedStringArray("raycast", "BlasterAudio")]
script = ExtResource("11_h2wd3")
raycast = NodePath("../RayCast3D")
laserEffect = ExtResource("12_fdiwb")
BlasterAudio = NodePath("../AudioStreamPlayer3D")
BlasterShotClip = ExtResource("13_w7gp7")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="CharacterBody3D/CameraPivot/Hand"]
stream = ExtResource("13_w7gp7")
bus = &"Blaster"

[node name="ScoreUIContainer" type="Control" parent="CharacterBody3D" node_paths=PackedStringArray("ScoreLabel", "VictoryLabel") groups=["ScoringGroup"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_m0n7w")
ScoreLabel = NodePath("ScoreLabel")
VictoryLabel = NodePath("VictoryLabel")

[node name="ScoreLabel" type="Label" parent="CharacterBody3D/ScoreUIContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.0
offset_right = 123.0
offset_bottom = 53.0
grow_horizontal = 2
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VictoryLabel" type="Label" parent="CharacterBody3D/ScoreUIContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -26.5
offset_right = 123.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
text = "Congrats, You  won!!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_r70ab")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.702974, -0.00886636, 0.71116, -0.662659, 0.354963, 0.659458, -0.258282, -0.934838, 0.243654, 2.77565, 3.64767, 0)
shadow_enabled = true

[connection signal="onDestruction" from="CSGBox3D2/StaticBody3D/Damagable" to="CharacterBody3D/ScoreUIContainer" method="onVictory"]
